# rust-actix-server

nyan-server/: .env  .gitignore  Cargo.toml  docker-compose.yml
nyan-server/files/css/: main.css  main_old.css  project.css  styles.css
nyan-server/frontend/: asset-manifest.json  index.html  precache-manifest.8f66dc7a310e0f92434341f02b81d077.js  precache-manifest.ce5c9151d810aa7dd5cd70b882817367.js  service-worker.js
nyan-server/frontend/static/css/: main.d4264be8.chunk.css  main.d4264be8.chunk.css.map
nyan-server/frontend/static/js/: 2.a5969cd8.chunk.js  2.a5969cd8.chunk.js.map  main.913f272b.chunk.js  main.913f272b.chunk.js.map  main.e7683ced.chunk.js  main.e7683ced.chunk.js.map  runtime-main.62d041bb.js  runtime-main.62d041bb.js.map  runtime-main.e7eb2258.js  runtime-main.e7eb2258.js.map
nyan-server/public/: index.html  login.html  project_form.html
nyan-server/public/css/: main.css
nyan-server/public/templates/: index.html  login.html  project.html  project_form.html  project_list.html
nyan-server/src/: config.rs  cors.rs  db.rs  handlers.rs  main.rs  models.rs  multi_part_handler.rs  sql.pgsql
