[package]
name = "nyan-server"
version = "0.1.0"
authors = ["Nyannazz <kantemir.imam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    actix-rt="1.0.0"
    actix-web="2.0.0"
    actix-files = "0.2.1"
    actix-session = "0.3.0"
    actix-utils = "1.0.3"
    futures = "0.3.1"
    dotenv="0.15.0"
    config="0.10.1"
    serde={ version="1.0.104", features=["derive"] }
    tokio-postgres = "0.5.3"
    tokio-pg-mapper= "0.1.4"
    tokio-pg-mapper-derive= "0.1.4"
    deadpool-postgres="0.5.0"