[package]
name = "nyan-server"
version = "0.1.0"
authors = ["Nyannazz <kantemir.imam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    async-std = "1.4.0" 
    actix-rt="1.0.0"
    actix-web = { version = "2.0"}
    actix-files = "0.2.1"
    actix-session = "0.3.0"
    actix-utils = "1.0.3"
    actix-multipart="0.2.0"
    actix-identity="0.2.1"
    actix-cors="0.2.0"
    bcrypt = "0.8"
    lettre = "0.9"
    lettre_email = "0.9"
    bytes = { version = "0.5", features = ["serde"] }
    mime="0.3.14"
    futures = "0.3.1"
    dotenv="0.15.0"
    config="0.10.1"
    serde={ version="1.0.104", features=["derive"] }
    tokio-postgres = "0.5.3"
    tokio-pg-mapper= "0.1.4"
    tokio-pg-mapper-derive= "0.1.4"
    deadpool-postgres="0.5.0"